--- a/index.html
+++ b/index.html
@@ -7,25 +7,16 @@
     <title>Document</title>
 </head>
 <body>
-<h1>vai ser uma imagem aqui</h1>
+<h1> vai ser uma imagem aqui</h1>
 
 </body>
 </html>
 <litle>Document</litle>
-<link rel="stylesheet" href="style.css"
-<h1>vai ser uma imagem aqui</h1>
-<Ul>
-
-</Ul>
-<li>estudante</li>
-<li>escola</li>
-<UL>
-
-</UL>
+<link rel="stylesheet" href="style.css">
 <header>
-<h1>vai ser uma imagem aqui</h1>
-<u1>
+    <h1>vai ser uma imagem aqui</h1>
+ <ul>
     <li>estudante</li>
     <li>escola</li>
-</u1>
+ </ul>
 </header>
